--- a/mystyle.css
+++ b/mystyle.css
@@ -1,1 +1,10 @@
+h1 {
+	font-family: nexa;
+	text-align: center;
+	font-size: 430%;
+	margin-top: 100px;
+	margin-bottom: 50px;
+	font-weight: 1500;
+}
+
 
