--- a/style.css
+++ b/style.css
@@ -1,18 +1,41 @@
 h1 {
-	font-family: nexa;
+	font-family: 'Open Sans', sans-serif;
 	text-align: center;
-	font-size: 250%;
+	font-size: 350%;
 	margin-top: 100px;
-	margin-bottom: 50px;
-	font-weight: 1500;
+	margin-bottom: 5px;
+	font-weight: 500;
+}
+
+.underline-small{
+	color: black;
+	position: relative;
+}
+
+.underline-small::after{
+	content: '';
+	height: 3px;
+	width: 12%;
+	background: black;
+	position: absolute;
+	margin: auto;
+	bottom: -5px;
+	left: 0; 
+	right: 0;
+}
+
+p {
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+	font-size: 120%;
 }
 
 body {
-	/*background-color: */
+	background-color: #D6D6D6;
 }
 
 #directions {
-	font-family: sans-serif; 
+	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 	font-weight: bold;
 	font-style: italics;
@@ -20,18 +43,21 @@ body {
 }
 
 .right {
+	font-family: 'Open Sans', sans-serif;
 	color: green;
 	font-weight: bold;
 	opacity: 0.0;
 }
 
 .wrong {
+	font-family: 'Open Sans', sans-serif;
 	color: red;
 	font-weight: bold;
 	opacity: 0.0;
 }
 
 .btn {
+	font-family: 'Open Sans', sans-serif;
 	background-color: #e7e7e7;
 	color: black;
 	padding: 5px 11px;
@@ -40,6 +66,6 @@ body {
 	justify-content: center;
 	align-items: center;	
 	font-size: 12px;
-	margin: 3px 1.5px;
+	margin: auto;
 	cursor: pointer;
 }
